DEV-5 rework login and logout, add password hashing

--- a/cms/templates/dashboard/overview.html
+++ b/cms/templates/dashboard/overview.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-The dashboard overview
+<p>The dashboard overview</p>
+<p>
+    <a href="?cmd=authentication&action=logout">Logout</a>
+</p>
 </body>
 </html>
