--- a/cms/templates/authentication/login.html
+++ b/cms/templates/authentication/login.html
@@ -9,6 +9,15 @@
 <section>
     <h3>census CMS Login</h3>
     <h4>Test</h4>
+
+    {% if valid == false and errors.authenticationError %}
+    <p>Error, please verify your login data (you have {{ retryCount }} retries).</p>
+    {% endif %}
+
+    {% if valid == false and errors.timeoutError %}
+    <p>Error, the login was too long opened. Please <a href="/backend">reload this page</a>.</p>
+    {% endif %}
+
     <form method="post" action="">
         <fieldset>
             <div class="form-row">
@@ -21,7 +30,7 @@
                 <button type="submit" name="auth">Login</button>
             </div>
         </fieldset>
-        <input type="hidden" name="timer" value="{time}" />
+        <input type="hidden" name="timestamp" value="{{ timestamp }}" />
     </form>
 </section>
 
