--- a/cms/templates/authentication/login.html
+++ b/cms/templates/authentication/login.html
@@ -10,12 +10,10 @@
     <h3>census CMS Login</h3>
     <h4>Test</h4>
 
-    {% if valid == false and errors.authenticationError %}
-    <p>Error, please verify your login data (you have {{ retryCount }} retries).</p>
-    {% endif %}
-
     {% if valid == false and errors.timeoutError %}
-    <p>Error, the login was too long opened. Please <a href="/backend">reload this page</a>.</p>
+    <p>Timeout. Please <a href="/backend">reload this page</a> and login again.</p>
+    {% elseif valid == false and errors.authenticationError %}
+    <p>Error, please verify your login data (you have {{ retryCount }} retries).</p>
     {% endif %}
 
     <form method="post" action="">
