--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -94,3 +94,22 @@ input {
 	height: auto;
 	width: 100%;
 }
+
+.modal__error {
+	background: rgb(190, 0, 0);
+	left: 0;
+	position: absolute;
+	top: 8%;
+	width: 60%;
+}
+
+.modal__error p,
+.modal__error a {
+	color: #fff;
+}
+
+.modal__error .wrapper {
+	padding-right: 25px;
+	width: 25%;
+	float: right;
+}
