DEV-6 refactoring the view to more abstract, add layout setter

--- a/cms/templates/backend/_layout.html
+++ b/cms/templates/backend/_layout.html
@@ -7,6 +7,10 @@
 	{{ page.resources | raw }}
 </head>
 <body>
+<div class="cms__top">
+
+</div>
+{{ page.navigation | raw }}
 {{ page.body | raw }}
 </body>
 </html>
