DEV-6 change template

--- a/cms/templates/backend/_layout.html
+++ b/cms/templates/backend/_layout.html
@@ -7,10 +7,14 @@
 	{{ page.resources | raw }}
 </head>
 <body>
-<div class="cms__top">
-
-</div>
-{{ page.navigation | raw }}
-{{ page.body | raw }}
+	<div class="cms__top">
+		<small><a href="/backend/">Dashboard</a> | census 0.0.1-dev</small>
+	</div>
+	<aside>
+	{{ page.navigation | raw }}
+	</aside>
+	<main>
+	{{ page.body | raw }}
+	</main>
 </body>
 </html>
