--- a/cms/templates/controller/backend/dashboard.html
+++ b/cms/templates/controller/backend/dashboard.html
@@ -1,4 +1,4 @@
-<p>The dashboard overview</p>
+<h3>Dashboard</h3>
 <p>
-	<a href="?cmd=authentication&action=logout">Logout</a>
+	Welcome to census CMS
 </p>
