--- a/assets/stylesheets/backend.css
+++ b/assets/stylesheets/backend.css
@@ -1,3 +1,99 @@
-/*
- * $Title$
- */
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: sans-serif;
+}
+
+body:after {
+  content: '';
+  clear: both;
+  display: block;
+}
+
+aside,
+main {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+  height: 100%;
+}
+
+aside {
+  background: #dfeb00;
+  padding: 50px 0 0 0;
+  width: 15%;
+}
+
+main {
+  color: #333;
+  padding: 50px 25px 25px 25px;
+  width: 85%;
+}
+
+.cms__top {
+  background: #005082;
+  color: #dfeb00;
+  min-height: 30px;
+  padding-left: 25px;
+}
+
+.cms__top a {
+  color: #fff;
+}
+
+nav ul,
+nav li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav > ul > li h4 {
+  color: #fff;
+  border-bottom: 1px dotted #fff;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+nav > ul > li h4:before {
+  content: '';
+  padding: 0 0 0 25px;
+}
+
+nav > ul > li > ul {
+  margin: 0 0 25px 0;
+}
+
+nav > ul > li > ul > li a {
+  color: #005082;
+  display: block;
+  padding: 10px 0 10px 25px;
+  text-decoration: none;
+}
+
+nav > ul > li > ul > li a:hover, nav > ul > li > ul > li a.active {
+  background: #fff;
+  color: #005082;
+}
+
+/*# sourceMappingURL=backend.css.map */
