DEV-0 considered refactoring of the whole application

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -27,13 +27,19 @@ nav {
 					a {
 						color: $blue-flat;
 						display: block;
+						font-size: 14px;
 						padding: $space-small 0 $space-small $tpl-space-left;
 						text-decoration: none;
+						text-transform: uppercase;
 
 						&:hover,
 						&.active {
 							background: $white;
 							color: $blue-flat;
+						}
+
+						&:before {
+							display: inline-block;
 						}
 					}
 				}
