--- a/cms/templates/controller/backend/dashboard.html
+++ b/cms/templates/controller/backend/dashboard.html
@@ -1,4 +1,10 @@
+{% extends 'layouts/backend.html' %}
+
+{% block pagetitle %}Dashboard{% endblock%}
+
+{% block main %}
 <h3>Dashboard</h3>
 <p>
 	Welcome to census CMS
 </p>
+{% endblock%}
