--- a/assets/scss/globals/_backend.scss
+++ b/assets/scss/globals/_backend.scss
@@ -37,4 +37,20 @@ main {
 			color: $white;
 		}
 	}
+
+	&__columns {
+		&:after {
+			@include clearfix();
+		}
+	}
+
+	&__sidebar {
+		float: left;
+		width: 20%;
+	}
+
+	&__body {
+		float: left;
+		width: 80%;
+	}
 }
