--- a/cms/templates/controller/backend/module.html
+++ b/cms/templates/controller/backend/module.html
@@ -1,2 +1,8 @@
+{% extends 'layouts/backend.html' %}
+
+{% block pagetitle %}Modules{% endblock%}
+
+{% block main %}
 <h3>Module::{{ currentModule }}</h3>
 <p>Lorem ipsum dolor</p>
+{% endblock%}
