--- a/cms/templates/partials/navigation.html
+++ b/cms/templates/partials/navigation.html
@@ -7,7 +7,10 @@
 			{% for mod in category.modules %}
 				{% if mod.category == category.label %}
 				<li>
-					<a href="{{ mod.href }}"{% if currentModule and currentModule == mod.key %} class="active"{% endif %}>{{ mod.label }}</a>
+					<a href="{{ mod.href }}"{% if currentModule and currentModule == mod.key %} class="active"{% endif %}>
+						<span>{{ mod.icon | raw }}</span>
+						{{ mod.label }}
+					</a>
 				</li>
 				{% endif %}
 			{% endfor %}
