DEV-2 add the use modules in backend

--- a/cms/templates/layouts/backend.html
+++ b/cms/templates/layouts/backend.html
@@ -10,7 +10,7 @@
 		<small><a href="/backend/">Dashboard</a> | census 0.0.1-dev</small>
 	</div>
 	<aside>
-		{% block navigation %}{% endblock %}
+		{% include 'partials/navigation.html' %}
 	</aside>
 	<main>
 		{% block main %}{% endblock %}
