--- a/cms/templates/partials/navigation.html
+++ b/cms/templates/partials/navigation.html
@@ -1,6 +1,6 @@
 <nav>
 	<ul>
-		{% for category in nav.categories %}
+		{% for category in CMS__navigation %}
 		<li>
 			<h4>{{ category.label }}</h4>
 			<ul>
