--- a/assets/scss/components/_pagetree.scss
+++ b/assets/scss/components/_pagetree.scss
@@ -1,2 +1,34 @@
 .pagetree {
+	li {
+		padding: 4px 0 0 0;
+
+		a {
+			padding: 0;
+
+			&:before {
+				background-image: url('../icomoon/svg/037-file-empty.svg');
+				background-size: cover;
+				content: '';
+				display: inline-block;
+				height: 16px;
+				margin-right: 5px;
+				vertical-align: baseline;
+				width: 16px;
+			}
+		}
+	}
+
+	> ul {
+		> li {
+			> ul {
+				padding-left: $space-small;
+
+				> li {
+					> ul {
+						padding-left: $space-small * 2;
+					}
+				}
+			}
+		}
+	}
 }
