--- a/assets/stylesheets/backend.css
+++ b/assets/stylesheets/backend.css
@@ -118,4 +118,31 @@ nav > ul > li > ul > li a:before {
   display: inline-block;
 }
 
+.pagetree li {
+  padding: 4px 0 0 0;
+}
+
+.pagetree li a {
+  padding: 0;
+}
+
+.pagetree li a:before {
+  background-image: url("../icomoon/svg/037-file-empty.svg");
+  background-size: cover;
+  content: '';
+  display: inline-block;
+  height: 16px;
+  margin-right: 5px;
+  vertical-align: baseline;
+  width: 16px;
+}
+
+.pagetree > ul > li > ul {
+  padding-left: 10px;
+}
+
+.pagetree > ul > li > ul > li > ul {
+  padding-left: 20px;
+}
+
 /*# sourceMappingURL=backend.css.map */
