--- a/cms/templates/controller/backend/dashboard.html
+++ b/cms/templates/controller/backend/dashboard.html
@@ -3,8 +3,10 @@
 {% block pagetitle %}Dashboard{% endblock%}
 
 {% block main %}
-<h3>Dashboard</h3>
-<p>
-	Welcome to census CMS
-</p>
+<div class="cms__body has__fullwidth">
+	<h3>Dashboard</h3>
+	<p>
+		Welcome to census CMS
+	</p>
+</div>
 {% endblock%}
