--- a/cms/templates/controller/backend/module.html
+++ b/cms/templates/controller/backend/module.html
@@ -3,6 +3,8 @@
 {% block pagetitle %}Modules{% endblock%}
 
 {% block main %}
-<h3>Module::{{ currentModule }}</h3>
-<p>Lorem ipsum dolor</p>
+<div class="cms__body has__fullwidth">
+	<h3>Module::{{ currentModule }}</h3>
+	<p>Lorem ipsum dolor</p>
+</div>
 {% endblock%}
