--- a/assets/scss/globals/_page.scss
+++ b/assets/scss/globals/_page.scss
@@ -3,6 +3,7 @@ html, body {
 }
 
 body {
+	font-size: $font-size-default;
 	margin: 0;
 	padding: 0;
 }
@@ -14,7 +15,8 @@ header {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
 	margin: 0;
 	padding: 0;
 }
