--- a/cms/templates/module/page/index.html
+++ b/cms/templates/module/page/index.html
@@ -7,8 +7,30 @@
 
 	<div class="cms__body">
 		<h3>Module::page</h3>
+
+		{% if pageData %}
+		<dl>
+			<dt>Title: </dt><dd>{{ pageData.realname }}</dd>
+			<dt>Description: </dt><dd>{{ pageData.description }}</dd>
+			<dt>Is site root: </dt><dd>{% if pageData.root %}YES{% else %}NO{% endif %}</dd>
+		</dl>
+
 		<p>
-			Edit and add pages, change settings or content.
+			<a href="?mod=page&context=edit&dir={{ pageData.dir }}&parent={{ pageData.parent | url_encode}}">Edit page</a> |
+			<a href="?mod=page&context=add&dir={{ pageData.dir }}&parent={{ pageData.parent | url_encode}}">Add new page</a>
 		</p>
+
+		<hr />
+
+		<div class="page__content">
+			<h6>Page Content</h6>
+
+			{% for element in contentData %}
+			{% include 'partials/content/preview.html' with {content: element} %}
+			{% endfor %}
+		</div>
+		{% else %}
+		@todo include partial with global information
+		{% endif %}
 	</div>
 {% endblock %}
