--- a/cms/templates/partials/pagetree/loop.html
+++ b/cms/templates/partials/pagetree/loop.html
@@ -1,8 +1,8 @@
 {% if pages %}
 	<ul>
 		{% for subpage in pages %}
-		<li{% if currentDir and currentDir == subpage.dir %} class="current"{% endif %}>
-			<a href="?mod=page&context=content&dir={{ subpage.dir }}&parent={{ subpage.parent | url_encode}}">{{ subpage.realname }}</a>
+		<li{% if currentDir and currentDir == subpage.dir %} class="current"{% endif %}{% if subpage.root %} data-root="1"{% endif %}>
+			<a href="?mod=page&context=index&dir={{ subpage.dir }}&parent={{ subpage.parent | url_encode}}">{{ subpage.realname }}</a>
 			{% include 'partials/pagetree/loop.html' with {'pages': subpage._sub, 'currentDir': currentDir} %}
 		</li>
 		{% endfor %}
